--- a/secondPage/style2.css
+++ b/secondPage/style2.css
@@ -137,6 +137,34 @@ footer {
     justify-content: space-evenly;
     margin: 40px 130px;
 }
+/* social icon design */
+.socialIcon {
+    color: wheat;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.socialIcon span {
+    margin: 10px;
+    border: 1px solid;
+    padding: 6px;
+    height: 20px;
+    width: 20px;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    transition: 1s;
+}
+.socialIcon span a {
+    color: wheat;
+}
+
+.socialIcon span:hover{
+    transform: rotate(360deg);
+    
+}
 
 
 
